# Structured-Data-to-Explanation-NaturalLangugeGeneration

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements..txt
.github/workflows/: diggrent.yml  integration_tests.yml  smoke_tests.yml  test_with_pythonpath.yml
notebooks/: generated_workflow.yml  manual_run.ipynb  update_workflows.ipynb
notebooks/outputs/example_run_notebook/: summary.json
notebooks/outputs/example_run_notebook/data/: aggregates.csv  pairs.csv  pairs_sample.json  transactions.csv
outputs/example_run_test/: summary.json
outputs/example_run_test/data/: aggregates.csv  pairs.csv  pairs_sample.json  transactions.csv
outputs/example_run_test/data/eda/: summary.json
outputs/example_run_test/pipeline/: sar_ACC_0001_2025-12.json  sar_ACC_0002_2025-12.json  sar_ACC_0003_2025-12.json  sar_ACC_0004_2025-12.json  sar_ACC_0005_2025-12.json
outputs/pipeline/: sar_ACC_0001_2025-12.json  sar_ACC_0002_2025-12.json  sar_ACC_0003_2025-12.json
scripts/: commit_and_update.sh  restructure_project.py  run_smoke_tests.bat  run_smoke_tests.sh
src/seq2seq_sar/: README.md  aggregation.py  config.yaml  data_generator.py  dataset_builder.py  eda.py  evaluation.py  experiments.py  infer.py  requirements.txt  run_full_pipeline.py  serializer.py  train.py  utils.py
src/seq2seq_sar/tests/: test_dataset_builder_with_eda.py  test_eda.py  test_experiment_smoke.py  test_sar_output_human_readable.py  test_serializer.py
tests/: test_smoke.py
tests/integration/: test_integration.py
tools/: run_smoke_tests.py
(+7 files in other folders)
