[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "table_to_text"
version = "0.1.0"
description = "Seq2Seq SAR generation (T5/BART)"
authors = [ { name = "Deb", email = "debabrata.fin@gmail.com" } ]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["seq2seq_sar*"]
